[package]
name = "taitank-safe"
version = "0.0.0-dev.1"
description = "taitank in safe rust"
# include = ["/src", "README.md", "/include/taitank_safe.h", "/include/taitank/src", ".gitmodules", "build.rs"]
license = "MIT"
build = "build.rs"
edition = "2021"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"